# algo

./: .gitignore  README.md
cours/: Makefile
cours/fondamentaux/: fondamentaux.tex
cours/fondamentaux/listings/: index.cpp
cours/fondamentaux/scripts/: best_worst_average.py  grand_o.py
cours/graphes/: Makefile  default.beamer  graph_algorithms.md  graph_impl_traversal_corr.md  graph_theory.md  shortest_path.md
cours/implementation/: concepts_avances.tex  implementation.tex
cours/implementation/figures/: generate_pdf.sh  insertionsort.graphml  insertionsort_details.graphml  iterateurs.graphml  list.graphml  set.graphml  vector.graphml
cours/implementation/listings/: class_date.cpp  class_date_squelette.cpp  classe.cpp  containers_mean.cpp  containers_mean_iterators.cpp  containers_mean_using_value_type.cpp  containers_mean_value_type.cpp  foncteur.cpp  fonctions.cpp  fonctions_templates.cpp  init.cpp  lambda.cpp  (+20 more)
cours/structures/: structures_part1.tex  structures_part2.tex  structures_part3.tex
src/: CMakeLists.txt
src/lib/date/: CMakeLists.txt  date.cpp  date.hpp
src/lib/math/: math.cpp  math.hpp
src/lib/vector/: CMakeLists.txt  vector.cpp
src/td2/: main.cpp
src/td3/: CMakeLists.txt  even_forward_iterator.cpp  reverse.cpp
src/td4/: CMakeLists.txt  map_perf.cpp  reverse_telephone_dictionary.cpp
src/test/: CMakeLists.txt
src/test/date/: CMakeLists.txt  tests.cpp
src/test/vector/: CMakeLists.txt  main.cpp  tests.cpp
td/: Makefile  td1.md  td2.md  td2b.md  td3.md  td4.md  td5.md  td6.md  td7.md
td/figures/: graph1.graphml  graph2.graphml
(+112 files in other folders)
